--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="blue-box red-border" id="qa-block">
-    <div class="yellow-box red-border">
-      <div class="white-box red-border">
-        <p class="content">In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.</p>
+  <div class="outer-box" id="qa-block">
+    <div class="middle-box">
+      <div class="inner-box">
+        In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.
       </div>
     </div>
   </div>
-  <div class="blue-box">
-    <div class="yellow-box">
-      <div class="white-box">
-        <p class="content">У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.</p>
+  <div class="outer-box">
+    <div class="middle-box">
+      <div class="inner-box">
+       У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.
       </div>
     </div>
   </div>
-  <div class="blue-box">
-    <div class="yellow-box">
-      <div class="white-box">
-        <p class="content">Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.</p>
+  <div class="outer-box">
+    <div class="middle-box">
+      <div class="inner-box">
+       Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.
       </div>
     </div>
   </div>
